[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Music/Forever Insanity.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Codes/Kilro.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0.210938, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.631373, 0, 0.431373, 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1088, 872 )

[node name="Kilro" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
bus = "Music"

[node name="TimerLayer" type="CanvasLayer" parent="."]

[node name="TimerBar" type="ProgressBar" parent="TimerLayer"]
margin_top = 16.0
margin_right = 512.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 0.1
value = 100.0
percent_visible = false

[node name="Title" type="Label" parent="TimerLayer/TimerBar"]
margin_top = -3.0
margin_right = 512.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 5 )
text = "HP: 250, 000 / 250, 000"
align = 1
valign = 1

[node name="Playerfinder" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Playerfinder"]
position = Vector2( 256, 152 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Playerfinder" to="." method="_on_Playerfinder_body_entered"]
